--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "A micro frontend for browsing restaurants.",
   "repository": "git@github.com:micro-frontends-demo/browse",
-  "author": "Cam Jackson <camjackson89@gmail.com>",
+  "author": "Cam Jackson",
   "license": "MIT",
   "scripts": {
     "format": "prettier --write",
@@ -13,9 +13,11 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "history": "^4.7.2",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.0",
     "styled-components": "^3.2.1"
   },
