--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "styled-components": "^3.2.1"
   },
   "devDependencies": {
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "jest-enzyme": "^6.0.2",
     "prettier": "^1.11.1"
   },
   "prettier": {
     "singleQuote": true,
-    "trailingComma": "all",
-    "printWidth": 100
+    "trailingComma": "all"
   }
 }
